--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1{
     align-items:center;
     justify-content:center;
     border:none;
+    transition: all .5s ease-in-out;
 }
 
 .btn:hover{
@@ -81,13 +82,14 @@ h1{
     line-height: 140%;
     color: #FFFFFF;
     opacity: 0.8;
+    padding-bottom: 1px;
     text-decoration: none;
-    transition: ease-in-out ;
+    border-bottom: none;
+    transition: all .4s ease-in-out;
 }
 .main-section .main-section__header .main-section__header__a:hover{
-    opacity: 1;
     border-bottom: 1px solid white;
-    padding-bottom: 1px;
+    opacity: 1;
 }
 
 .main-section .main-section__header .main-section__header__a:nth-child(1){
@@ -143,6 +145,12 @@ h1{
     margin-left: 715px;
     display: flex;
     justify-content:space-between;
+    
+}
+
+.main-section .main-section__icon{
+    transition: all .5s;
+    border-bottom:none;
 }
 
 .main-section .main-section__icon:hover{
@@ -237,7 +245,7 @@ h1{
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 145%;
+    line-height: 147%;
     color:var(--text-color);
     text-align: center;
 }
@@ -278,3 +286,240 @@ h1{
     padding-bottom: 1px;
     border-bottom: 1px solid var(--text-color);
 }
+
+/* ------------- */
+
+.learn-more{
+    height: 842px;
+    padding: 120px 0 140px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.learn-more .learn-more__content{
+    width: 407px;
+    height: 184px;
+    margin-top: 198px;
+    margin-right: 378px;
+}
+
+.learn-more .learn-more__img{
+    margin-left: 269px;
+}
+
+.learn-more .learn-more__content .learn-more__content__title{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: var(--text-color);
+    margin-bottom: 22px;
+}
+
+.learn-more .learn-more__content .learn-more__content__text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 145%;
+    color: #4E4E4E;
+    margin-bottom: 30px;
+}
+.learn-more .learn-more__content .learn-more__content__btn{
+    width: 180px;
+}
+
+/* -------------- */
+
+.email-section{
+    height: 598px;
+    padding: 217px 0 277px 0;
+    background-image: url(./assets/img/pexels-christina-morillo-1181675\ 1.jpg);
+}
+
+.email-section .email-section__title{
+    text-align: center;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+
+.email-section .email-section__from{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 0 auto;
+}
+
+.email-section .email-section__input{
+    width: 340px;
+    height: 46px;
+    background-color: #fff;
+    border: none;
+    padding-left: 24px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+    color: var(--text-color);
+}
+
+.email-section .email-section__btn{
+    width: 66px;
+    height: 46px;
+    background-color: #00AFDB;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 2s ease-in-out;
+}
+
+.email-section__btn__img_hover{
+    width: 21px;
+    height: 18px;
+}
+
+/* ---------- */
+
+.download{
+    height: 468px;
+    padding: 120px 0 180px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    background: #F5F6F7;
+}
+
+.download .download__title{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+
+.download .download__subtitle{
+    width: 483px;
+    height: 40px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+    color: #4E4E4E;
+    text-align: center;
+    margin-top: 22px;
+    margin-bottom: 28px;
+}
+
+.download .download__block-btn{
+    width: 406px;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.download .download__block-btn .download__block-btn__btn{
+    display: flex;
+    border:none;
+    cursor: pointer;
+}
+
+.download .download__block-btn .download__block-btn__text{
+    height: 100%;
+    width: 128px;
+    background-color: var(--main-color);
+    padding: 18px 17px 16px 17px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.download .download__block-btn .download__block-btn__block-img{
+    background-color: #009CC2;
+    width: 60px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
+/* -------- */
+
+.footer{
+    height: 184px;
+    background: #000000;
+    display: flex;
+    padding: 60px 0 79px 0;
+}
+
+.footer .footer__block-link{
+    width: 293px;
+    height: 16px;
+    display: flex;
+    margin-left: 140px;
+    margin-right: 345px;
+    margin-top: 14px;
+}
+
+.footer .footer__block-link .footer__block-link__link{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+    color: #FFFFFF;
+    opacity: 0.98;
+    padding-left: 20px;
+    padding-right: 21px;
+    text-decoration: none;
+    /* border-right: 1px solid #4E4E4E; */
+    transition: all 0.3s ease-in-out; 
+    position: relative;
+}
+.footer .footer__block-link .footer__block-link__link::after{
+    position:absolute;
+    top:9px;
+    left:81px;
+    transform: rotate(90deg);
+    width:8px;
+    border-top:1px solid #4E4E4E;
+    content:"";
+}
+.footer .footer__block-link .footer__block-link__link:hover{
+    color:var(--main-color);
+}
+.footer .footer__block-link .footer__block-link__link:nth-child(3)::after{
+    content:"";
+    border-top:none;
+}
+.footer .footer__block-link .footer__block-link__link:nth-child(1){
+    
+    padding-left: none;
+}
+
+.footer .footer__name-design{
+    width: 170px;
+    height: 20px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 140%;
+    text-align: center;
+    color: #818181;
+    margin-left: 448px;
+    margin-top: 14px;
+}
+
